--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
   },
   "devDependencies": {
     "rollup": "^0.48.2",
-    "rollup-plugin-buble": "^0.15.0",
-    "rollup-watch": "^2.5.0"
+    "rollup-plugin-buble": "^0.15.0"
   }
 }
