--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "dist"
   ],
   "dependencies": {
-    "mime": "^1.3.6",
-    "opener": "^1.4.3"
+    "mime": "2",
+    "opener": "1"
   },
   "devDependencies": {
     "rollup": "^0.48.2",
