--- a/package.json
+++ b/package.json
@@ -33,8 +33,14 @@
     "dist"
   ],
   "dependencies": {
+    "compression": "^1.7.4",
+    "connect-history-api-fallback": "^1.6.0",
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^1.0.0",
+    "killable": "^1.0.1",
     "mime": ">=2.0.3",
-    "opener": "1"
+    "opener": "1",
+    "serve-index": "^1.9.1"
   },
   "devDependencies": {
     "rollup": "1",
