--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
     "dist"
   ],
   "dependencies": {
-    "mime": ">=2.0.3",
+    "mime": ">=2.4.6",
     "opener": "1"
   },
   "devDependencies": {
-    "rollup": "1",
-    "rollup-plugin-buble": "^0.15.0",
+    "rollup": "2",
+    "@rollup/plugin-buble": "0.21.3",
     "standard": "14"
   }
 }
