--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "rollup-plugin-serve",
   "version": "2.0.1",
   "description": "Serve your rolled up bundle",
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.es.js",
-  "jsnext:main": "dist/index.es.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
   "types": "index.d.ts",
   "exports": {
     "import": "./dist/index.mjs",
