--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -cw",
-    "lint-check": "prettier --check *.mjs src/** test/**",
-    "lint": "prettier --write *.mjs src/** test/**",
+    "lint-check": "standard *.mjs src/**/*.js test/**/*.js",
+    "lint": "standard --fix *.mjs src/**/*.js test/**/*.js",
     "prepare": "yarn lint && yarn build",
     "test": "rollup -c && rollup -c test.rollup.config.mjs -w"
   },
@@ -53,6 +53,6 @@
   "devDependencies": {
     "@rollup/plugin-buble": "^1.0.2",
     "rollup": "^3.26.3",
-    "prettier": "*"
+    "standard": "*"
   }
 }
