--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dev": "rollup -cw",
     "lint-check": "standard *.mjs src/**/*.js test/**/*.js",
     "lint": "standard --fix *.mjs src/**/*.js test/**/*.js",
-    "prepare": "yarn lint && yarn build",
+    "prepare": "npm run lint && npm run build",
     "test": "rollup -c && rollup -c test.rollup.config.mjs -w"
   },
   "keywords": [
