Upgrade mime to version 4
The previous range was relatively loose. Since mime 4 introduced a breaking change rollup-plugin-serve broke.

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "index.d.ts"
   ],
   "dependencies": {
-    "mime": ">=2.4.6",
+    "mime": "^4.0.0",
     "opener": "1"
   },
   "devDependencies": {
