--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "module": "dist/index.mjs",
   "types": "index.d.ts",
   "exports": {
+    "types": "./index.d.ts",
     "import": "./dist/index.mjs",
     "default": "./dist/index.cjs"
   },
