--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -cw",
-    "lint": "standard --fix rollup.config.js src/**",
-    "prepare": "yarn lint && yarn build",
+    "fix": "prettier --write .",
+    "prepare": "yarn fix && yarn build",
     "test": "cd test && rollup -cw || cd .."
   },
   "keywords": [
@@ -47,6 +47,12 @@
     "@rollup/plugin-buble": "^1.0.0",
     "@types/node": "^20.10.1",
     "rollup": "4",
-    "standard": "17"
+    "prettier": "^3"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "none",
+    "semi": false,
+    "printWidth": 120
   }
 }
