--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rollup-plugin-serve",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "Serve your rolled up bundle",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
@@ -46,8 +46,8 @@
   "devDependencies": {
     "@rollup/plugin-buble": "^1.0.0",
     "@types/node": "^20.10.1",
-    "rollup": "4",
-    "prettier": "^3"
+    "prettier": "^3",
+    "rollup": "4"
   },
   "prettier": {
     "singleQuote": true,
